--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/279013b1-911a-4c95-965c-8881b488a28c.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/97072d03-3ee8-46fe-873c-38a7aae5882c.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/e258d85f-6804-45d7-a98f-be1024809ab6.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/7215511b-8f91-479c-bbe4-6fd159e3e43e.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/c773ffd5-9af7-4dfa-83cd-3300dc0b0a60.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/edb573d2-5a7f-4d2b-b9cb-92abf7860bc6.vsidx
