--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/7215511b-8f91-479c-bbe4-6fd159e3e43e.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/c773ffd5-9af7-4dfa-83cd-3300dc0b0a60.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/edb573d2-5a7f-4d2b-b9cb-92abf7860bc6.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/4987e033-7c6c-4d46-99f3-d560998d5caa.vsidx
