--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/c773ffd5-9af7-4dfa-83cd-3300dc0b0a60.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/edb573d2-5a7f-4d2b-b9cb-92abf7860bc6.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/4987e033-7c6c-4d46-99f3-d560998d5caa.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/d9a9d11c-9b8e-4fe6-8412-f6864d48c050.vsidx
