--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/edb573d2-5a7f-4d2b-b9cb-92abf7860bc6.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/4987e033-7c6c-4d46-99f3-d560998d5caa.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/d9a9d11c-9b8e-4fe6-8412-f6864d48c050.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/32872acf-81e8-496c-a08b-41112c3937a0.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/fb0d885e-1a34-4e3a-b164-717ad521676b.vsidx
