Cambios al repositorio sobre cache

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/d9a9d11c-9b8e-4fe6-8412-f6864d48c050.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/32872acf-81e8-496c-a08b-41112c3937a0.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/fb0d885e-1a34-4e3a-b164-717ad521676b.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/48fbd846-66a3-4528-8b44-c9b235910abb.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/93a4c928-c610-42d3-95e0-76673356cf77.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/c210fe68-fcaa-4be7-b8b6-38b1f5aa213c.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/1efffe7c-33bc-4269-a33e-03a7b826b21a.vsidx
