Agregando autenticacion y autorizacion con JWT

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/93a4c928-c610-42d3-95e0-76673356cf77.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/c210fe68-fcaa-4be7-b8b6-38b1f5aa213c.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/1efffe7c-33bc-4269-a33e-03a7b826b21a.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/23b74360-6203-4bf0-85dc-f34a508340b5.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/2c777731-ce98-4cc2-a089-8e4ed0da353e.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/364ef405-8a28-4935-be58-cc7f135dc5b9.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/86a965dc-748b-444d-b20e-26eed57902af.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/cecd9599-8f2e-491f-91ae-0eceb3dd9a63.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/b2302d94-5fe5-47e6-a34a-d0de28bc618e.vsidx
