Ultimos cambios al proyecto final

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/86a965dc-748b-444d-b20e-26eed57902af.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/cecd9599-8f2e-491f-91ae-0eceb3dd9a63.vsidx
 /TaskWebApi/.vs/TaskWebApi/FileContentIndex/b2302d94-5fe5-47e6-a34a-d0de28bc618e.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/7b9334e6-d7e5-4891-a6a5-5ab2a23df821.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/a63f9eea-af91-479d-b041-a764c2960d0f.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/f3688959-7976-4ed2-b862-3368b023ed93.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/cf1ae404-15f3-46f7-9da5-7d50eba0cd38.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/aa4fda3d-b795-4f3c-806a-c50ea27673c7.vsidx
+/TaskWebApi/.vs/TaskWebApi/FileContentIndex/d90d4ae6-0e7a-4545-be4f-738997834710.vsidx
